@@ -25,19 +25,20 @@ import com.webforj.router.annotation.Route;
 @Route
 @FrameTitle("QR Events")
 public class QREventView extends Composite<FlexLayout> {
-
-  Div label = new Div("Click Me!");
-  QRCode qrCode = new QRCode("https://www.webforj.com");
+  private final FlexLayout self = getBoundComponent();
+  private final Div label = new Div("Click Me!");
+  private final QRCode qrCode = new QRCode("https://www.webforj.com");
 
   public QREventView() {
-    getBoundComponent().setSpacing("10px").setMargin("20px").setWidth(200);
-    getBoundComponent().setDirection(FlexDirection.COLUMN);
+    self.setSpacing("10px")
+        .setMargin("20px")
+        .setWidth(200)
+        .setDirection(FlexDirection.COLUMN)
+        .add(label, qrCode);
 
-    getBoundComponent().add(label, qrCode);
-    qrCode.setSize(200);
-    qrCode.setColor("#000");
+    qrCode.setSize(200)
+        .setColor("#000");
 
-    /* Adding an onClick event */
     qrCode.onClick(e -> showMessageDialog("Client X:" + e.getClientX(), "You clicked the QR code"));
   }
 
@@ -45,9 +46,9 @@ public class QREventView extends Composite<FlexLayout> {
    * QRCode Generator using Shoelace QRCode component.
    */
   @JavaScript(value = "https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.87/dist/shoelace.js", attributes = {
-      @Attribute(name = "type", value = "module") })
+    @Attribute(name = "type", value = "module") })
   @NodeName("sl-qr-code")
-  public final class QRCode extends ElementComposite {
+  public static final class QRCode extends ElementComposite {
 
     private final PropertyDescriptor<String> descValue = PropertyDescriptor.property("value", "");
     private final PropertyDescriptor<Integer> descSize = PropertyDescriptor.property("size", 128);
@@ -92,7 +93,7 @@ public class QREventView extends Composite<FlexLayout> {
     }
 
     public QRCode setColor(Color color) {
-      String hex = String.format("#%02x%02x%02x", color.getRed(), color.getGreen(), color.getBlue());
+      String hex = "#%02x%02x%02x".formatted(color.getRed(), color.getGreen(), color.getBlue());
       set(descColor, hex);
       return this;
     }
@@ -102,14 +103,13 @@ public class QREventView extends Composite<FlexLayout> {
       return this;
     }
 
-    /* Adding the onClick registration method */
     public ListenerRegistration<ClickEvent> onClick(EventListener<ClickEvent> listener) {
       return addEventListener(ClickEvent.class, listener);
     }
 
   }
 
-  /* Creating a click event. */
+  // Creating a click event.
   @EventName("click")
   @EventOptions(data = { @EventOptions.EventData(key = "clientX", exp = "event.clientX") })
   public static class ClickEvent extends ComponentEvent<QRCode> {
