@@ -15,17 +15,15 @@ import com.webforj.router.annotation.Route;
 @Route
 @FrameTitle("QR Properties")
 public class QRPropertiesView extends Composite<FlexLayout> {
-
-  QRCode qrCode = new QRCode("https://www.webforj.com");
+  private final FlexLayout self = getBoundComponent();
+  private final QRCode qrCode = new QRCode("https://www.webforj.com");
 
   public QRPropertiesView() {
-    getBoundComponent().setMargin("var(--dwc-space-m)");
+    self.setMargin("var(--dwc-space-m)")
+        .add(qrCode);
 
-    getBoundComponent().add(qrCode);
-
-    /* Setting the properties */
-    qrCode.setSize(200);
-    qrCode.setColor("#0059B8");
+    qrCode.setSize(200)
+        .setColor("#0059B8");
   }
 
   /**
@@ -34,7 +32,7 @@ public class QRPropertiesView extends Composite<FlexLayout> {
   @JavaScript(value = "https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.87/dist/shoelace.js", attributes = {
       @Attribute(name = "type", value = "module") })
   @NodeName("sl-qr-code")
-  public final class QRCode extends ElementComposite {
+  public static final class QRCode extends ElementComposite {
 
     private final PropertyDescriptor<String> descValue = PropertyDescriptor.property("value", "");
     private final PropertyDescriptor<Integer> descSize = PropertyDescriptor.property("size", 128);
@@ -82,7 +80,7 @@ public class QRPropertiesView extends Composite<FlexLayout> {
     }
 
     public QRCode setColor(Color color) {
-      String hex = String.format("#%02x%02x%02x", color.getRed(), color.getGreen(), color.getBlue());
+      String hex = "#%02x%02x%02x".formatted(color.getRed(), color.getGreen(), color.getBlue());
       set(descColor, hex);
       return this;
     }
